<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="apps.uncc.com.myapplication.TriviaActivity"
        >

        <TextView
        android:id="@+id/textViewQuesNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time Left : X seconds"
        android:textSize="18sp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignBaseline="@+id/textViewQuesNo"
        android:layout_alignBottom="@+id/textViewQuesNo"
        android:layout_alignRight="@+id/buttonNext"
        android:layout_alignEnd="@+id/buttonNext" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="18dp"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/textViewQuesNo"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/imageViewQues"
            android:layout_width="368dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"

            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="76dp" />

        <ProgressBar
            android:id="@+id/progressBarQues"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="17dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewQuesIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="the question is "
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="257dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignStart="@+id/textViewQuesNo" />

    <Button
        android:id="@+id/buttonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="11dp"
        android:layout_toEndOf="@+id/textViewQuesNo"
        android:text="@string/quit"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonQuit"
        android:layout_alignBottom="@+id/buttonQuit"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="11dp"
        android:text="@string/next"
        tools:layout_editor_absoluteX="277dp"
        tools:layout_editor_absoluteY="444dp" />

    <RadioGroup
        android:id="@+id/RgOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewQuesIs"
        android:layout_alignStart="@+id/textViewQuesIs"
        android:layout_below="@+id/textViewQuesIs"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/loadingImage" />

</RelativeLayout>